file some way to fix mobile

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -5,7 +5,12 @@ body,
   height: 100%;
 }
 
+html {
+  min-height: 100vh;
+}
+
 body {
+  min-height: 100vh;
   font-size: 14px;
 }
 
@@ -61,7 +66,6 @@ aside::-webkit-scrollbar-thumb {
   background: white;
   border: 3px solid #3e95ff;
 }
-
 
 main::-webkit-scrollbar {
   width: 5px;
