--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -2,25 +2,24 @@
 @dark-1: #000 !important;
 @dark-2: #1f1f1f !important;
 
+// install font for project
+
 @font-face {
-  font-family: 'Merriweather';
-  src: url('~/assets/fonts/Merriweather/Merriweather-Regular.ttf') format('truetype');
-  font-weight: normal;
+  font-family: 'Nunito';
+  src: url('~/assets/fonts/Nunito/Nunito-VariableFont_wght.ttf') format('truetype');
   font-style: normal;
 }
 @font-face {
-  font-family: 'Noto_Serif';
-  src: url('~/assets/fonts/Noto_Serif/NotoSerif-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+  font-family: 'Nunito';
+  src: url('~/assets/fonts/Nunito/Nunito-Italic-VariableFont_wght.ttf') format('truetype');
+  font-style: italic;
 }
 
-
-
-[data-theme="light"] {
+[data-theme='light'] {
   background-color: @light-1;
 
-  .bg-1, .bg-2 {
+  .bg-1,
+  .bg-2 {
     background-color: @light-1;
   }
   .ant-layout-sider {
@@ -32,11 +31,11 @@
   }
 
   .text-2 {
-    color: rgba(0,0,0,.85);
+    color: rgba(0, 0, 0, 0.85);
   }
 }
 
-[data-theme="dark"] {
+[data-theme='dark'] {
   .bg-1 {
     background-color: @dark-1;
   }
@@ -49,6 +48,6 @@
   }
 
   .text-2 {
-    color: rgba(255,255,255,.65);
+    color: rgba(255, 255, 255, 0.65);
   }
 }
