--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -4,7 +4,7 @@
 
 @import './theme.less';
 
-@import './modifytheme.less';
+// @import './modifytheme.less';
 
 //@import './modifybyscreen.less';
 
