test theme dark

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -5,12 +5,8 @@ body,
   height: 100%;
 }
 
-html {
-  min-height: 100vh;
-}
-
 body {
-  min-height: 100vh;
+  margin: 0;
   font-size: 14px;
 }
 
@@ -45,38 +41,4 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-.icon-loading {
-  background-image: url('../assets/logo/logloading.svg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-}
-
-aside::-webkit-scrollbar {
-  width: 5px;
-}
-
-aside::-webkit-scrollbar-track {
-  background: white;
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
-aside::-webkit-scrollbar-thumb {
-  background: white;
-  border: 3px solid #3e95ff;
-}
-
-main::-webkit-scrollbar {
-  width: 5px;
-}
-
-main::-webkit-scrollbar-track {
-  background: white;
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
-main::-webkit-scrollbar-thumb {
-  background: white;
-  border: 3px solid #3e95ff;
 }
