--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -2,24 +2,10 @@
 @dark-1: #000 !important;
 @dark-2: #1f1f1f !important;
 
-// install font for project
-
-@font-face {
-  font-family: 'Nunito';
-  src: url('~/assets/fonts/Nunito/Nunito-VariableFont_wght.ttf') format('truetype');
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Nunito';
-  src: url('~/assets/fonts/Nunito/Nunito-Italic-VariableFont_wght.ttf') format('truetype');
-  font-style: italic;
-}
-
-[data-theme='light'] {
+[data-theme="light"] {
   background-color: @light-1;
 
-  .bg-1,
-  .bg-2 {
+  .bg-1, .bg-2 {
     background-color: @light-1;
   }
   .ant-layout-sider {
@@ -31,11 +17,11 @@
   }
 
   .text-2 {
-    color: rgba(0, 0, 0, 0.85);
+    color: rgba(0,0,0,.85);
   }
 }
 
-[data-theme='dark'] {
+[data-theme="dark"] {
   .bg-1 {
     background-color: @dark-1;
   }
@@ -48,6 +34,6 @@
   }
 
   .text-2 {
-    color: rgba(255, 255, 255, 0.65);
+    color: rgba(255,255,255,.65);
   }
 }
